fix the jumping

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,6 @@ Text Domain: ebs.local
 */
 
 html {
-	scroll-behavior: smooth;
 	-webkit-box-sizing: border-box;
 	   -moz-box-sizing: border-box;
 			box-sizing: border-box;
